--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-       background-color: #5893d4;
+       background-color: #6b90ca;
        font-family: 'Cuprum', sans-serif;
        margin-top: 0px;
        text-align: center;
