--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ hr { border: 5px  #eeeeee;
 .name { position: absolute;
         top: 210px; left: 60%;
         color: #f8b739;
-        font-family: 'Courgette', cursive;
+        font-family: 'Amatic SC', cursive;
         font-size: 3rem;
       }
 
@@ -25,7 +25,7 @@ hr { border: 5px  #eeeeee;
 .dev { position: absolute;
        top: 255px; left: 60%;
        color: #f8b739;
-       font-family: 'Pacifico', cursive;
+       font-family: 'Permanent Marker', cursive;
        font-size: 2rem;
       }
 
