--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
        background-color: #6b90ca;
-       font-family: 'Cuprum', sans-serif;
+       font-family: 'Overpass', sans-serif;
        margin-top: 0px;
        text-align: center;
      }
