--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ hr { border: 5px  #eeeeee;
 
 .name { position: absolute;
         top: 210px; left: 60%;
-        color: #f8b739;
+        color: #f6f5f5;
         font-family: 'Amatic SC', cursive;
         font-size: 3rem;
       }
@@ -24,7 +24,7 @@ hr { border: 5px  #eeeeee;
 
 .dev { position: absolute;
        top: 255px; left: 60%;
-       color: #f8b739;
+       color: #f6f5f5;
        font-family: 'Permanent Marker', cursive;
        font-size: 2rem;
       }
