--- a/styles.css
+++ b/styles.css
@@ -69,12 +69,12 @@ div {
 
 .p1 {
   clear: right;
-  padding: 0 20px;
+  padding: 0 20px 10px;
 }
 
 .p2 {
   clear: left;
-  padding: 0 20px;
+  padding: 0 20px 10px;
 }
 
 .skills, .owner, .author {
