--- a/styles.css
+++ b/styles.css
@@ -69,11 +69,16 @@ div {
 
 .p1 {
   clear: right;
-  padding: 0 20px 0 30px;
+  padding: 0 20px 0 50px;
 }
 
 .p2 {
   clear: left;
+  padding: 0 20px 0 10px;
+}
+
+.p3 {
+  clear: right;
   padding: 0 20px 0 10px;
 }
 
