--- a/styles.css
+++ b/styles.css
@@ -69,17 +69,17 @@ div {
 
 .p1 {
   clear: right;
-  padding: 0 20px 0 50px;
+  padding: 0 15px 30px 15px;
 }
 
 .p2 {
   clear: left;
-  padding: 0 20px 0 10px;
+  padding: 0 15px 20px 15px;
 }
 
 .p3 {
   clear: right;
-  padding: 0 20px 0 10px;
+  padding: 0 15px 20px 15px;
 }
 
 .skills, .owner, .author {
