--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,8 @@ div {
 .OHLogo {
   position: relative;
   height: 100px;
-  width: 150px;
+  width: 100px;
+  border-radius: 50%;
 }
 
 .devimg {
